# pfn_transformers

./: .gitignore  AI_DOCUMENTATION.md  API.md  README.md  pyproject.toml
.claude/: settings.local.json
cookbooks/: 01_supervised_linear_regression.py  02_unsupervised_coinflips.py  03_supervised_polynomial.py  04_unsupervised_markov.py  05_wandb_config_interpretability.py  06_supervised_binary_classification.py  07_continuous_sampling_demo.py  README.md
pfn_transformerlens/: __init__.py  bayes.py  checkpointing.py  configs.py  generators.py  sweep.py  train.py  wandb_logger.py  wandb_utils.py
pfn_transformerlens/model/: PFN.py  PFNConfig.py  PFNMasks.py  __init__.py  bucketizer.py
pfn_transformerlens/model/configs/: __init__.py  base.py  classification.py  regression.py  unsupervised.py
pfn_transformerlens/sampler/: __init__.py  data_generator.py  dataloader.py  prior_likelihood.py  sampler.py
tests/: test_bucketizer.py  test_checkpointing.py  test_classification.py  test_data_generator.py  test_device_placement.py  test_generation.py  test_integration.py  test_masks.py  test_prior_likelihood.py  test_sampler_vectorized.py  test_sweep.py  test_unsupervised.py  test_wandb_utils.py
workbooks/: 01_supervised_linear_regression.py  02_unsupervised_coinflips.py  03_supervised_polynomial.py  04_unsupervised_markov.py  05_wandb_config_interpretability.py  README.md
